@startuml

class User {
  name: String
  eMail: String
  phoneNumber: String
}

User -->"1" Address: "home"
User -->"0..*" Address: "alternatives"

class Donor extends User {
  comment: String // "about me/preferences"
  interval: DeltaTime
  slotPreferences: String // Cron
}
enum Bloodtype {
  O-
  O+
  A+
  A-
  B+
  B-
  AB+
  AB-
}

Donor -->"0..*" TestResult
Donor --> "1" Bloodbank: "prefers a"

class TestResult {
  time: Timestamp
  validityDuration: Interval 
  invalidated: Boolean
}

TestResult -->"1" Form

class Form {
  okToDonate: Boolean
}

class EntryForm extends Form {

}

class Interview extends Form {

}
Interview -->"1" Admin: "held by"

class DonationTest extends Form {

}

Donor --> "1" Bloodtype

class Admin extends User {}

Bloodbank "0..*"-->"1..*" Admin

class Note {
  time: Timestamp
  message: String
}

Appointment "1"<-- Note
Note --> "1" User: "created by"

class Appointment{
  cancelled: Boolean
}

class Donation {
  amountInMl: Float
  isBloodNotPlasma: Boolean
}

Donation -->"0..1" DonationTest

Appointment --> "0..1" Donation
Appointment --> "1" Bookingslot
Appointment "0..*"--> "1" Donor

class Bookingslot{
  time: Timestamp
  duration: Interval
  // Time has to fall into 
  // the bloodbanks opening hours
  capacity: Int
}

Bloodbank "1"<--"0..*" Bookingslot

class Bloodbank {
  name: String
  // A blood bus is represnted by 
  // multiple bloodbanks with diffent names

}

Bloodbank -->"1" Location
Bloodbank -->"0..*" Holiday
Bloodbank -->"0..*" RecurringHoliday

class Location {
  longitude: Float
  latitude: Float
}

Location --> "0..1" Address

class Address {
  streetname: String
  streetnumber: String
  postalcode: Int
  city: String
  country: String
}

Bloodbank --> "*" Timerange: "opening hours"

class Timerange {
  openingCron: String
  openDuration: Interval
}

class Holiday {
  description: String
  start: Timestamp
  end: Timestamp
}

class RecurringHoliday {
  description: String
  startingCron: String
  duration: Interval
}
@enduml
